--- a/tools/pdf_extracter/demo_join_record.ipynb
+++ b/tools/pdf_extracter/demo_join_record.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "root = r\"C:\\Users\\Chenglu Zhu\\PycharmProjects\\PDF_extract\\test\""
+    "root = r\"PATH TO PDF FILE FOLDER""
    ],
    "metadata": {
     "collapsed": false,
